--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.4"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1"
   }
 }
