--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ts-jest": "^26.5.4"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "mongodb": "^3.6.5"
   }
 }
