--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "eslint": "^7.23.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5"
   }
 }
