--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongodb": "^3.6.12",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "eslint": "^7.23.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -36,6 +37,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "mockdate": "^3.0.5",
     "ts-jest": "^26.5.4"
   },
   "dependencies": {
