--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Api built to simulate an bank account management system",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -24,9 +26,12 @@
   "homepage": "https://github.com/MarceloSavian/bank_account_backend#readme",
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongodb": "^3.6.12",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "eslint": "^7.23.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -38,11 +43,21 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "mockdate": "^3.0.5",
-    "ts-jest": "^26.5.4"
+    "rimraf": "^3.0.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.5"
+    "module-alias": "^2.2.2",
+    "mongodb": "^3.6.5",
+    "swagger-ui-express": "^4.1.6"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
