--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.23.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
