--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongodb": "^3.6.12",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.23.0",
@@ -56,7 +57,8 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.5",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "validator": "^13.5.2"
   },
   "_moduleAliases": {
     "@": "dist"
