--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,15 @@ services:
     container_name: api-bank-account
     restart: always
     image: node:12
-    working_dir: /usr/src/clean-node-api
+    working_dir: /usr/src/bank-account-api
     command: bash -c "npm install --only=prod && npm run debug"
     volumes: 
-      - ./dist/:/usr/src/clean-node-api/dist
-      - ./package.json:/usr/src/clean-node-api/package.json
+      - ./dist/:/usr/src/bank-account-api/dist
+      - ./package.json:/usr/src/bank-account-api/package.json
     ports: 
       - "5050:5050"
       - "9222:9222"      
     links:
       - mongo
     environment: 
-      - MONGO_URL=mongodb://mongo:27017/clean-node-api
+      - MONGO_URL=mongodb://mongo:27017/bank-account
