--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,12 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 workflows:
-  node-tests:
-    jobs:
-      - eslint 'src/**'
-      - npm run test:coveralls
+  checklint:
+    executor: docker-image
+    steps:
+        - checkout
+        - node/install-packages:
+            cache-path: ~/project/node_modules
+            override-ci-command: npm install
+        - run:
+            command: eslint 'src/**'
