--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,10 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  checklint:
-    executor: docker-image
+jobs:
+  lint:
+    docker:
+      - image: circleci/node:12.4
+    working_directory: ~/repo
     steps:
-        - checkout
-        - node/install-packages:
-            cache-path: ~/project/node_modules
-            override-ci-command: npm install
-        - run:
-            command: eslint 'src/**'
+      - checkout
+      - run: npm install
+      - run: npm run lint
