--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,8 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run lint
+workflows:
+  version: 2
+  build:
+    jobs:
+      - lint
