--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  lint:
+  lintandtest:
     docker:
       - image: circleci/node:12.4
     working_directory: ~/repo
@@ -8,6 +8,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run lint
+      - run: npm run test:coveralls
 workflows:
   version: 2
   build:
