--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  lintandtest:
+  lint:
     docker:
       - image: circleci/node:12.4
     working_directory: ~/repo
@@ -8,9 +8,17 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run lint
+  test:
+    docker:
+      - image: circleci/node:12.4
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: npm install
       - run: npm run test:coveralls
 workflows:
   version: 2
   build:
     jobs:
       - lint
+      - test
