--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,10 @@
 version: 2.1
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: marcelosavian/bankaccountbackend
+    docker:
+      - image: circleci/node:12.4
 jobs:
   lint:
     docker:
@@ -17,26 +23,31 @@ jobs:
       - run: npm install
       - run: npm run test:coveralls
   build:
-    environment:
-      IMAGE_NAME: marcelosavian/bankaccountbackend
-    docker:
-      - image: circleci/node:12.4
-    working_directory: ~/repo
+    executor: docker-publisher
     steps:
       - checkout
       - setup_remote_docker
       - run: npm install
       - run:
           name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest .
+          command: |
+            docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
   publish-latest:
-    environment:
-      IMAGE_NAME: marcelosavian/bankaccountbackend
-    working_directory: ~/repo
-    docker:
-      - image: circleci/node:12.4
+    executor: docker-publisher
     steps:
+      - attach_workspace:
+          at: /tmp/workspace
       - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
